--- a/reports/eda-sense8.Rmd
+++ b/reports/eda-sense8.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "EDA Sense8"
+title: "Dados sobre séries de TV,"
 output:
   html_notebook:
     toc: yes
@@ -16,7 +16,7 @@ library(here)
 theme_set(theme_bw())
 ```
 
-Analisaremos os episódios das séries Sense 8, Orphan Black e Breaking Bad.
+Analisaremos os episódios das séries Black Mirror, Breaking Bad e Orphan Black.
 
 ```{r}
 episodes = read_csv(here("data/series_from_imdb.csv"), 
@@ -26,23 +26,71 @@ episodes = read_csv(here("data/series_from_imdb.csv"),
                                      episode = col_character(), 
                                      url = col_character(),
                                      season = col_character())) %>% 
-    filter(series_name %in% c("Sense8", "Orphan Black", "Breaking Bad"))
+    filter(series_name %in% c("Orphan Black", "Black Mirror", "Breaking Bad"))
 ```
 
 ## Qual das séries que você escolheu é mais bem avaliada no IMDB? A diferença é grande? Pequena? Muda de acordo com as temporadas da série? 
 
-Para responder essa pergunta precisaremos analisar a avaliação feita pelos usuários para episódio de cada série.
-
+Para responder essas perguntsa precisaremos analisar a avaliação feita pelos usuários para os episódios de cada série.
 ```{r}
 data_median <- episodes %>%
     group_by(series_name, season) %>%
     summarise(median_serie = median(user_rating)) 
+    
 
 ggplot(data = data_median,  aes(x = season, y = median_serie, color = series_name, group=series_name)) +
 geom_line(stat='identity') +
      geom_point()
 ```
+Através desse gráfico é possível perceber que a série mais bem avaliada no IMDB é Breaking Bad, porém não é uma diferença muito grande. Fazendo a média dos pontos de cada série obtemos a média das avaliações sendo:
+   - Black Mirror: (8.3+8.2+8.4)/3 = 8.29
+   - Breaking Bad: (8.7+8.9+8.7+8.9+9.45)/5 = 8.93
+   - Orphan Black: (8.4+8.6+8.55+8.65)/4 = 8.55
+Além disso, observamos que essa avaliação muda de acordo com as temporadas de cada série.
 
+## Qual das séries que você escolheu tem episódios de qualidade mais irregular segundo o IMDB? A diferença é grande? Pequena?
+
+Para obter essa resposta, vamos calcular o desvio padrão da mediana de cada temporada para cada série.
+
+```{r}
+medians_BM <- data_median %>%
+    filter(series_name %in% c("Black Mirror"))
+med_BM = medians_BM$median_serie
+print("Black Mirror:")
+sd(med_BM)
+
+medians_BB <- data_median %>%
+    filter(series_name %in% c("Breaking Bad"))
+med_BB = medians_BB$median_serie
+print("Breaking Bad:")
+sd(med_BB)
+
+medians_OB <- data_median %>%
+    filter(series_name %in% c("Orphan Black"))
+med_OB = medians_OB$median_serie
+print("Orphan Black:")
+sd(med_OB)
+
+
+
+```
+Ou seja, Breaking Bad possui mais episódios de qualidade mais irregular segundo o IMDB. A diferença dessa entre as outras duas é grande, mas das outras duas entre si é pequena.
+
+## Qual das séries ou temporadas tem episódios mais sem graça? (Um episódio é sem graça se ninguém nem ama nem odeia ele)
+
+```{r}
+data_not_funny <- episodes %>%
+    group_by(series_name, r4, r5, r6) %>%
+    summarise(sum = r4+r5+r6) 
+
+ggplot(data = data_not_funny,  aes(x = series_name, y = sum, color = series_name, group=series_name)) +
+geom_boxplot()
+
+```
+Black Mirror tem mais episódios sem graça.
+
+
+## Episódios no início/fim da temporada são mais bem avaliados que os no meio? O que tende a ser melhor? Inícios ou finais de séries/temporadas?
 
 ```{r}
 episodes %>% 
