--- a/reports/eda-sense8.Rmd
+++ b/reports/eda-sense8.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Dados sobre séries de TV,"
+title: "Dados sobre séries de TV"
 output:
   html_notebook:
     toc: yes
@@ -29,9 +29,9 @@ episodes = read_csv(here("data/series_from_imdb.csv"),
     filter(series_name %in% c("Orphan Black", "Black Mirror", "Breaking Bad"))
 ```
 
-## Qual das séries que você escolheu é mais bem avaliada no IMDB? A diferença é grande? Pequena? Muda de acordo com as temporadas da série? 
+### Qual das séries que você escolheu é mais bem avaliada no IMDB? A diferença é grande? Pequena? Muda de acordo com as temporadas da série? 
 
-Para responder essas perguntsa precisaremos analisar a avaliação feita pelos usuários para os episódios de cada série.
+Para responder essas perguntas precisaremos analisar a avaliação feita pelos usuários para os episódios de cada série. Nesse gráfico são utilizadas as medianas das avaliações das temporadas.
 ```{r}
 data_median <- episodes %>%
     group_by(series_name, season) %>%
@@ -42,61 +42,72 @@ ggplot(data = data_median,  aes(x = season, y = median_serie, color = series_nam
 geom_line(stat='identity') +
      geom_point()
 ```
-Através desse gráfico é possível perceber que a série mais bem avaliada no IMDB é Breaking Bad, porém não é uma diferença muito grande. Fazendo a média dos pontos de cada série obtemos a média das avaliações sendo:
-   - Black Mirror: (8.3+8.2+8.4)/3 = 8.29
-   - Breaking Bad: (8.7+8.9+8.7+8.9+9.45)/5 = 8.93
-   - Orphan Black: (8.4+8.6+8.55+8.65)/4 = 8.55
-Além disso, observamos que essa avaliação muda de acordo com as temporadas de cada série.
+Através desse gráfico é possível perceber que a série mais bem avaliada no IMDB é Breaking Bad. Para verificar se a diferença entre as outras é grande, iremos calcular a média dos pontos obtidos através do gráfico:<br/>
 
-## Qual das séries que você escolheu tem episódios de qualidade mais irregular segundo o IMDB? A diferença é grande? Pequena?
+```{r}
+data_median %>% 
+    group_by(series_name) %>% 
+    summarise(media = mean(median_serie))
+```
 
-Para obter essa resposta, vamos calcular o desvio padrão da mediana de cada temporada para cada série.
+Dessa forma, concluímos que não há uma diferença muito grande com relação às outras séries.
+Além disso, observamos que os pontos do gráfico não seguem um padrão contínuo, ou seja, as avaliações estão variando de acordo com as temporadas.
 
+### Qual das séries que você escolheu tem episódios de qualidade mais irregular segundo o IMDB? A diferença é grande? Pequena?
+
+Para obter essa resposta, vamos calcular o desvio padrão das medianas encontradas no gráfico anterior.<br/>
+   - **Black Mirror**:
 ```{r}
 medians_BM <- data_median %>%
     filter(series_name %in% c("Black Mirror"))
 med_BM = medians_BM$median_serie
-print("Black Mirror:")
 sd(med_BM)
+```
 
+   - **Breaking Bad**: 
+```{r}
 medians_BB <- data_median %>%
     filter(series_name %in% c("Breaking Bad"))
 med_BB = medians_BB$median_serie
-print("Breaking Bad:")
 sd(med_BB)
-
+```
+   - **Orphan Black**: 
+```{r}
 medians_OB <- data_median %>%
     filter(series_name %in% c("Orphan Black"))
 med_OB = medians_OB$median_serie
-print("Orphan Black:")
 sd(med_OB)
-
-
-
 ```
-Ou seja, Breaking Bad possui mais episódios de qualidade mais irregular segundo o IMDB. A diferença dessa entre as outras duas é grande, mas das outras duas entre si é pequena.
+Ou seja, Breaking Bad possui mais episódios de qualidade mais irregular segundo o IMDB, pois um alto desvio padrão indica que os pontos dos dados estão espalhados por uma ampla gama de valores. A diferença dessa entre as outras duas é grande, mas das outras duas entre si é pequena.
 
-## Qual das séries ou temporadas tem episódios mais sem graça? (Um episódio é sem graça se ninguém nem ama nem odeia ele)
+### Qual das séries ou temporadas tem episódios mais sem graça? (Um episódio é sem graça se ninguém nem ama nem odeia ele)
+
+Os boxplots contruídos para encontrar essa resposta foi montado com base no somatório da proporção de usuários que avaliaram o episódio com os valores 4, 5 ou 6. Nesse caso, estamos avaliando todos os episódios de cada série, então iremos descobrir qual das séries tem episódios mais sem graça.
 
 ```{r}
 data_not_funny <- episodes %>%
-    group_by(series_name, r4, r5, r6) %>%
+    group_by(series_name, episode) %>%
     summarise(sum = r4+r5+r6) 
 
 ggplot(data = data_not_funny,  aes(x = series_name, y = sum, color = series_name, group=series_name)) +
 geom_boxplot()
 
 ```
-Black Mirror tem mais episódios sem graça.
+Pela distribuição dos dados mostrados nos boxplots, obtemos o seguinte ranking de séries que tem episódios mais sem graça:<br/>
+   **1º Black Mirror**<br/>
+   **2º Orphan Black**<br/>
+   **3º Breaking Bad**<br/>
+Essa conclusão é feita com base na linha da mediana de cada boxplot, dessa forma, a proporção de usuários que avaliaram os episódios de Black Mirror com os valores 4, 5 ou 6 é a maior dentre as 3 séries.
 
-
-## Episódios no início/fim da temporada são mais bem avaliados que os no meio? O que tende a ser melhor? Inícios ou finais de séries/temporadas?
+### Episódios no início/fim da temporada são mais bem avaliados que os no meio? O que tende a ser melhor? Inícios ou finais de séries/temporadas?
 
 ```{r}
 episodes %>% 
-    ggplot(aes(x = season_ep, y = user_votes))  + 
-    geom_line() + 
-    facet_wrap(~ season)
+    filter(series_name %in% c("Black Mirror")) %>% 
+    ggplot(aes(x = episode, y = user_rating)) + 
+    geom_bar(stat = 'identity') + 
+    facet_wrap( ~ season) +
+    theme(axis.text.x = element_text(angle = 25, hjust = 1))
                
 ```
 
